2005-10-28  John W. Eaton  <jwe@octave.org>

	* oct-sparse.h: Fix typo in HAVE_UFSPARSE_UMFPACK_H.
	From Quentin Spencer <qspencer@ieee.org>.

	* sparse-base-chol.cc: Use C++ true/false instead of
	preprocessor defined TRUE/FALSE.  Use 0 instead of NULL.

2005-10-27  John W. Eaton  <jwe@octave.org>

	* Array.cc (assignN): Reshape to final size instead of resizing.

2005-10-26  John W. Eaton  <jwe@octave.org>

	* oct-sparse.h: New file.
	* oct-sparse.h.in: Delete.

2005-10-26  David Bateman  <dbateman@free.fr>

	* sparse-base-chol.h: Include cholmod specific code in HAVE_CHOLMOD
	* sparse-base-chol.cc: ditto.

2005-10-26  John W. Eaton  <jwe@octave.org>

	Changes for GCC 4.1, tip from Arno J. Klaassen
	<arno@heho.snv.jussieu.fr>:

	* dSparse.h (real (const SparseComplexMatrix&)): 
	Publish externally used friend function.
	(imag (const SparseComplexMatrix&)): Likewise.

	* dColVector.h (real (const ComplexColumnVector&)):
	Publish externally used friend function.
	(imag (const ComplexColumnVector&)): Likewise.

	* dNDArray.h (real (const ComplexNDArray&)):
	Publish externally used friend function.
	(imag (const ComplexNDArray&)): Likewise.

	* dMatrix.h (operator * (const ComplexMatrix&)): 
	Move decl outside class.  No need to be friend.
	(real (const ComplexMatrix&)): Publish externally used friend function.
	(imag (const ComplexMatrix&)): Likewise.

	* CMatrix.h: (operator * (const ColumnVector&, const
	ComplexRowVector&)): Move decl outside class.  No need to be friend.
	(operator * (const ComplexColumnVector&, const RowVector&)): Likewise.
	(operator * (const ComplexColumnVector&, const ComplexRowVector& b)):
	Likewise.

2005-10-23  David Bateman  <dbateman@free.fr>
	
	* Sparse-op-defs.h (SPARSE_SPARSE_MUL): Check whether trailing zero
	elements need to be removed.
	
	* oct-sparse.h.in: Include metis headers and some macros for long/int
	versions of cholmod.
	
	* CSparse.cc (tinverse): New private function for the inversion of
	an upper triangular matrix.